// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CMAF Mux Pipeline E2E (host ffmpeg) > fMP4 video + fMP4 audio → valid MP4 output 1`] = `
{
  "duration": "3.000000",
  "sha256": "d5bda2bcd26ef1af661b97e3ce47b2a635d23d05e23b1a15301a8f8e9160978b",
  "sizeBytes": 84234,
  "streams": [
    {
      "codec_name": "h264",
      "codec_type": "video",
      "height": 184,
      "nb_frames": "90",
      "width": 320,
    },
    {
      "channels": 2,
      "codec_name": "aac",
      "codec_type": "audio",
      "nb_frames": "140",
      "sample_rate": "48000",
    },
  ],
}
`;

exports[`CMAF Mux Pipeline E2E (host ffmpeg) > fMP4 video-only → valid output 1`] = `
{
  "duration": "3.000000",
  "sha256": "7db4fbec72f65fc07ebbe19688603bc2fca0c7d4ad58d8adc39a0964a8ccdeb9",
  "sizeBytes": 56697,
  "streams": [
    {
      "codec_name": "h264",
      "codec_type": "video",
      "height": 184,
      "nb_frames": "90",
      "width": 320,
    },
  ],
}
`;
